<resources>
    <string name="app_name">Academia Stasy</string>
    <string name="exam_marks">EXAM MARKS</string>
    <string name="resetPassword">RESET PASSWORD</string>
    <string name="faculty">Faculty : </string>
    <string name="documents_grp_list">Documents</string>
    <string name="documents_title">DOCUMENTS</string>
    <string name="description">Description</string>
    <string name="forward_slash">/</string>
    <string name="large_text">Molecular physics is the study of the physical properties of molecules,
        the chemical bonds between atoms as well as the molecular dynamics.
        Its most important experimental techniques are the various types of spectroscopy;
        scattering is also used. The field is closely related to atomic physics and overlaps
        greatly with theoretical chemistry, physical chemistry and chemical physics.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="event_desc">VII B conducted a special assembly on Red Cross in the school.
        It started with the prayer followed by the thought of the day and news.</string>
    <string name="attendance_String">Attendance</string>
    <string name="end_sem_exam">End Semester Exam</string>
    <string name="end_semester">End Semester</string>
    <string name="total">TOTAL</string>
    <string name="percentage">Percentage</string>
    <string name="percentage_sign">%</string>
    <string name="grade">Grade</string>
    <string name="result">Result</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="participants">PARTICIPANTS</string>
    <string name="open_braces">(</string>
    <string name="close_braces">)</string>
    <string name="due_on">Due on</string>
    <string name="published_date">Published Date</string>
    <string name="attendance_grp_list">Attendance</string>
    <string name="assignment_grp_list">Assignment</string>
    <string name="timetable_grp_list">Timetable</string>
    <string name="fees_grp_list">Fees</string>
    <string name="exam_marks_grp_list">Exam Marks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_exam_list">ExamListActivity</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="gridViewCategory">Grid View Clicked</string>
    <string name="leftDrawer">Left Drawer Element</string>
    <string name="backPressed">Back Pressed</string>
    <string name="backButtonClicked">Back Button Clicked</string>
    <string name="refreshMenu">Refresh Menu</string>
    <string name="refreshMenuClicked">Refresh Menu Clicked</string>
    <string name="listElement">List Element</string>
    <string name="viewClick">UI Click</string>
    <string name="viewSwipe">View Swipe</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="allow_all_permissions">Please allow permissions for the app.</string>
    <string name="payTM_terms_and_conditions_title">TERMS AND CONDITIONS FOR ONLINE PAYMENTS</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_request">My Request</string>
    <string name="reset_password">Reset Password</string>
    <string name="share_app">Share App</string>
    <string name="rate_n_review">Rate &amp; Review Application</string>
    <string name="leave_a_feedback">Leave a Feedback</string>
    <string name="logout">Logout</string>
    <string name="whoops">Whoops!</string>
    <string name="all">All</string>
    <string name="due">Due</string>
    <string name="paid">Paid</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="select_all">Select All</string>
    <string name="program">Program</string>
    <string name="filter_by">Filter by</string>
    <string name="batch">Batch</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="tap_on_an_invoice_to_select">Tap on an invoice to select.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send">Send</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="reset">Reset</string>
</resources>