<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rlFeeGroup"
        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnForSelectOrCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_corner_pay_button_active"
            android:text="@string/select_all"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="right"
            android:id="@+id/llTop"
            android:background="@drawable/list_bg"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">

                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:layout_weight="1"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:buttonTint="@color/colorFees"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/rbDue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:buttonTint="@color/colorFees"
                    android:text="@string/due" />

                <RadioButton
                    android:id="@+id/rbPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:buttonTint="@color/colorFees"
                    android:text="@string/paid" />

            </RadioGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:nestedScrollingEnabled="true"
            android:layout_below="@+id/llTop"
            android:smoothScrollbar="true"
            android:scrollbars="none"
            android:fadeScrollbars="true">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    <com.cipolat.superstateview.SuperStateView
        android:id="@+id/superStateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:imageState="@drawable/academia_empty_state"
        app:setTitleText="@string/whoops"
        app:setSubTitleText="No Invoice Found!"
        app:titleStyle="@style/erro_title"
        app:subTitleStyle="@style/erro_sub_title"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>