<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.serosoft.academiassu.Modules.Fee.FeesWithPaymentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sub_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <include
            android:id="@+id/fee_sub_info_layout"
            layout="@layout/sub_info_layout"/>

    </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:id="@+id/feeGroupRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sub_info_layout">

            <Button
                android:id="@+id/buttonForSelectOrCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_corner_pay_button_active"
                android:text="@string/select_all"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="right"
                android:id="@+id/linearLayoutOnTop"
                android:background="@drawable/list_bg"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/checkBoxForSelectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:theme="@style/MyCheckBox"
                    android:text="@string/select_all" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <RadioButton
                        android:id="@+id/rbAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:layout_weight="1"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:buttonTint="@color/colorFees"
                        android:text="@string/all" />

                    <RadioButton
                        android:id="@+id/rbDue"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:buttonTint="@color/colorFees"
                        android:text="@string/due" />

                    <RadioButton
                        android:id="@+id/rbPaid"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:buttonTint="@color/colorFees"
                        android:text="@string/paid" />

                </RadioGroup>

            </LinearLayout>

            <ListView
                android:id="@+id/feeListGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:divider="@color/colorSlateGray"
                android:layout_below="@id/linearLayoutOnTop"
                android:layout_above="@+id/relativeLayoutOnBottom"
                android:dividerHeight="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:scrollbars="none"
                />

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:gravity="right"
                android:layout_alignParentBottom="true"
                android:id="@+id/relativeLayoutOnBottom"
                android:background="@color/colorGalleryCellBackground"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewForSelectionGuideLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAlignment="center"
                    android:layout_margin="8dp"
                    android:text="@string/tap_on_an_invoice_to_select"
                    android:textColor="@color/colorDarkGrayText"
                    android:visibility="invisible"
                    android:maxLines="1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAmountToPay"
                    style="@style/CustomBlackFont"
                    android:layout_below="@+id/textViewForSelectionGuideLabel"
                    android:gravity="center|left"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/amount_to_pay"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/textViewForPayableAmount"
                    style="@style/CustomBlackFont"
                    android:maxLines="1"
                    android:text=""
                    android:gravity="left"
                    android:layout_below="@+id/tvAmountToPay"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/colorForBalanceAmount"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonForPayNow"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textViewForSelectionGuideLabel"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:paddingRight="@dimen/_12sdp"
                    android:background="@drawable/rounded_corner_pay_button_inactive"
                    android:drawableRight="@drawable/proceed_to_pay_right"
                    android:text="@string/pay_now" />

            </RelativeLayout>

        </RelativeLayout>

    <com.cipolat.superstateview.SuperStateView
        android:id="@+id/superStateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:imageState="@drawable/academia_empty_state"
        app:setTitleText="@string/whoops"
        app:setSubTitleText="No Fees Details Found!"
        app:titleStyle="@style/erro_title"
        app:subTitleStyle="@style/erro_sub_title"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
