<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorMyRequest"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/titleTextView"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textSize="@dimen/_13sdp"
            style="@style/CustomWhiteFont" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_close_white_24dp"
            android:layout_marginRight="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEnterName1"
            android:text="@string/enter_your_username"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="left|center"
            android:layout_gravity="left|center"
            style="@style/CustomBlackFont"/>

        <EditText
            android:id="@+id/etUsername"
            style="@style/CustomEditText2"
            android:background="@drawable/bg_et"
            android:textSize="@dimen/_12sdp"
            android:hint="Username"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_marginTop="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnSend"
            android:text="@string/send"
            android:background="@drawable/bg_submit"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"/>

    </LinearLayout>

</LinearLayout>